Fix typo in Contact Form header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Simple HTML Form</title>
 </head>
 <body>
-  <h2>Contact Form</h2>
+  <h2>Contact Form<:-/h2>
   
   <form action="/submit" method="post">
     <label for="name">Name:</label><br>
